--- a/app/views/static_page/about.html.erb
+++ b/app/views/static_page/about.html.erb
@@ -1,7 +1,7 @@
 <%= render "layouts/navbar" %>
 <div class="aboutme">
   <% unless notice.nil?%>
-    <p class="black" id="notice"><%= notice %></p>
+    <p class="white" id="notice"><%= notice %></p>
   <%end%>
   <div class="eatCodeSleep">
     <span class="massive-text float-right">Eat</span>
@@ -19,7 +19,7 @@
       <span class="about-me-title page-title">hunter</span>
       <span class="hunter-prounounciation">|ˈhən(t)ər|</span>
     </div>
-    <span class="about-me-text">My surname "Jaeger" means hunter in German and describes me very well as a person. While I don't eat meat, I am always chasing a goal and don't give up until I conquer it. This is a trait that is represented in all my work. There is no challenge that I will not overcome.
+    <span class="about-me-text">While I did not choose my surname "Jaeger", it describes me perfectly as a person. Jaeger means hunter in German (you might be familiar with the drink Jägermeister). While I don't eat meat, I am always chasing a goal and don't give up until I accomplish it. There is no challenge that I will not overcome.
     </br>
     </br>
     I am a citizen of the world and have lived on all sides of the planet. I speak 3 languages fluently and love adventures and travel.</span>
@@ -30,10 +30,10 @@
     <div class="my-places-title-container">
       <span class="my-places-title page-title">My Story</span>
     </div>
-    <span class="my-places-text">I was born in Paderborn, a small town in the center of Germany. I spent my teenage years in Singapore. Upon graduation from high school I relocated to Canada where I graduated with a Degree in Business from a top Business School.
+    <span class="my-places-text">I was born in Paderborn, a small town in the center of Germany but spent my teenage years in Singapore. Upon graduation from High School I relocated to Canada to pursue my Higher Education at a top Business School.
     <br>
     <br>
-    After working in the start up industry in Paris for almost a year, I decided to further my skillset and relocated to Hong Kong to receive an education as a Software Engineer.
+    After working in the start up industry in Paris for almost a year, I decided to further my skillset and relocated to Hong Kong to obtain an education as a Software Engineer.
     <br>
     <br>
     My dream is to sail around the world. May the wind guide me.
