--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -5,7 +5,7 @@
 <%end%>
 <div class="get-quote">
   <div class="build-together-text-container">
-    <span class="build-together-text">Get a beautiful website tailored to your needs</span>
+    <span class="build-together-text">Get a website tailored to your needs</span>
     <span class="medium-sized white slogan">Let me worry about the website. You worry about the rest.</span>
     <a href="javascript:void(0)" class="btn btn-lg simple-button" id="get-quote-button">
       <span class="button-text">
