--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -596,6 +596,7 @@ footer{
 }
 
 .feature-list{
+  padding-top: 20px !important;
 }
 
 .key-features-title{
@@ -607,6 +608,8 @@ footer{
   font-weight: 100;
   font-size: 18px;
   letter-spacing: 1px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 #go-to-site, #contact-submit{
