--- a/app/views/static_page/portfolio.html.erb
+++ b/app/views/static_page/portfolio.html.erb
@@ -5,7 +5,7 @@
   <%end%>
   <div class="project">
     <div class="project-title-container">
-      <span class="project-title page-title">E-Commerce Website</span>
+      <span class="project-title page-title">E-Commerce</span>
     </div>
     <div class="project-image-container">
       <%= image_tag('e-commerce.jpg', :class=>"project-image")%>
@@ -18,7 +18,7 @@
         <li class="feature">Automatic Shipping Rate Calculation</li>
         <li class="feature">Secure Online Payment</li>
         <li class="feature">Supports all Main Currencies</li>
-        <li class="feature">Automatic Tracking Updates sent to Customer</li>
+        <li class="feature">Automatic Tracking Updates Sent to Customer</li>
       </ul>
       <a href="https://still-garden-48532.herokuapp.com" class="btn btn-lg simple-button" id="go-to-site">
         <span class="button-text">
@@ -34,7 +34,7 @@
     </div>
     <div class="get-a-site-text-container">
       <span class="get-a-site-text">
-        I offer a complete solution and cover all apsects from website development, business consulting to international expansion. Whatever your particular needs might be, I work with a global network of professionals and can meet almost any and every request.
+        I offer a complete solution and cover all apsects from website development, business consulting to international expansion. I work with a global network of professionals and strive to meet every request.
       </span>
     </div>
     <div class="button-container">
