--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,7 +59,7 @@ $grey: grey;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   opacity: .6;
   z-index: -1;
@@ -70,7 +70,11 @@ $grey: grey;
 }
 
 .get-quote::before{
-  background: url(cliff.jpg);
+  background: url(cliff.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   opacity: 0.8 !important;
 }
 
