--- a/app/views/static_page/about.html.erb
+++ b/app/views/static_page/about.html.erb
@@ -1,5 +1,5 @@
 <%= render "layouts/navbar" %>
-<div class="aboutme">
+<div class="aboutme page-content">
   <% unless notice.nil?%>
     <p class="white" id="notice"><%= notice %></p>
   <%end%>
@@ -8,7 +8,8 @@
     <span class="massive-text float-right orange">Code</span>
     <span class="massive-text float-right">Sleep</span>
     <div class="my-title-container">
-      <span class="my-title float-right">Freelance Web Developer / Creative - Gabriel M. Jaeger</span>
+      <span class="my-title float-right">Freelance Web Developer / Creative <span class="my-name">- Gabriel M. Jaeger</span></span>
+      <span class="my-name-small-screen float-right">- Gabriel M. Jaeger</span>
     </div>
   </div>
   <div class="about-me-image-container">
@@ -33,10 +34,7 @@
     <span class="my-places-text">I was born in Paderborn, a small town in the center of Germany but spent my teenage years in Singapore. Upon graduation from High School I relocated to Canada to pursue my Higher Education at a top Business School.
     <br>
     <br>
-    After working in the start up industry in Paris for almost a year, I decided to further my skillset and relocated to Hong Kong to obtain an education as a Software Engineer.
-    <br>
-    <br>
-    My dream is to sail around the world. May the wind guide me.
+    After working in the start up industry in Paris for almost a year, I decided to further my skillset and relocated to Hong Kong to study as a Software Engineer.
     </span>
   </div>
   <div class="my-places-image-container">
