--- a/app/views/static_page/portfolio.html.erb
+++ b/app/views/static_page/portfolio.html.erb
@@ -1,5 +1,5 @@
 <%= render "layouts/navbar" %>
-<div class="portfolio">
+<div class="portfolio page-content">
   <% unless notice.nil?%>
     <p class="black" id="notice"><%= notice %></p>
   <%end%>
@@ -20,11 +20,13 @@
         <li class="feature">Supports all Main Currencies</li>
         <li class="feature">Automatic Tracking Updates Sent to Customer</li>
       </ul>
-      <a href="https://still-garden-48532.herokuapp.com" class="btn btn-lg simple-button" id="go-to-site">
-        <span class="button-text">
-          Go To Site
-        </span>
-      </a>
+      <div class="go-to-site-button-container">
+        <a href="https://still-garden-48532.herokuapp.com" class="btn btn-lg simple-button" id="go-to-site">
+          <span class="button-text">
+            Go To Site
+          </span>
+        </a>
+      </div>
     </div>
   </div>
   <div class="new-project">
@@ -34,7 +36,10 @@
     </div>
     <div class="get-a-site-text-container">
       <span class="get-a-site-text">
-        I offer a complete solution and cover all apsects from website development, business consulting to international expansion. I work with a global network of professionals and strive to meet every request.
+        I offer a complete solution and cover all apsects from <strong>website</strong> development, <strong>business</strong> consulting to <strong>international</strong> expansion.
+        <br>
+        <br>
+        I work with a <strong>global</strong> network of <strong>professionals</strong> and strive to meet every request.
       </span>
     </div>
     <div class="button-container">
