--- a/app/views/static_page/about.html.erb
+++ b/app/views/static_page/about.html.erb
@@ -23,7 +23,7 @@
     <span class="about-me-text">While I did not choose my surname "Jaeger", it describes me perfectly as a person. Jaeger means hunter in German (you might be familiar with the drink Jägermeister). I am always chasing a goal and don't give up until I accomplish it. There is no challenge that I will not overcome.
     </br>
     </br>
-    I am a citizen of the world and have lived on all sides of the planet. I speak 3 languages fluently and love adventures and travel.</span>
+    I am a citizen of the world and have lived on all sides of the planet. I speak 3 languages fluently and love adventures jjand travel.</span>
   </div>
 </div>
 <div class="my-places">
