--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -519,6 +519,7 @@ footer{
   position: relative;
   width:60vw;
   height: calc(100vh - 60px);
+  overflow: scroll;
   display: inline-block;
 }
 
@@ -535,6 +536,7 @@ footer{
   width:60vw;
   display: inline-block;
   height: calc(100vh - 60px);
+  overflow: scroll;
 }
 
 .tab{
@@ -574,6 +576,7 @@ footer{
 
 .aboutme{
   height:calc(100vh - 60px);
+  overflow: scroll;
   margin-top: 60px;
 }
 
@@ -581,6 +584,7 @@ footer{
   position: relative;
   clear: both;
   height:calc(100vh - 60px) !important;
+  overflow: scroll;
   top:0px;
 }
 
@@ -718,6 +722,7 @@ footer{
 .carousel-inner{
   width:100vw !important;
   height: calc(100vh - 60px);
+  overflow: scroll;
   margin: 0;
 }
 
