--- a/app/views/static_page/about.html.erb
+++ b/app/views/static_page/about.html.erb
@@ -1,43 +1,45 @@
 <%= render "layouts/navbar" %>
-<div class="aboutme page-content">
-  <% unless notice.nil?%>
-    <p class="white" id="notice"><%= notice %></p>
-  <%end%>
-  <div class="eatCodeSleep">
-    <span class="massive-text float-right">Eat</span>
-    <span class="massive-text float-right orange">Code</span>
-    <span class="massive-text float-right">Sleep</span>
-    <div class="my-title-container">
-      <span class="my-title float-right">Freelance Web Developer / Creative <span class="my-name">- Gabriel M. Jaeger</span></span>
-      <span class="my-name-small-screen float-right">- Gabriel M. Jaeger</span>
+<div class="page-content">
+  <div class="aboutme">
+    <% unless notice.nil?%>
+      <p class="white" id="notice"><%= notice %></p>
+    <%end%>
+    <div class="eatCodeSleep">
+      <span class="massive-text float-right">Eat</span>
+      <span class="massive-text float-right orange">Code</span>
+      <span class="massive-text float-right">Sleep</span>
+      <div class="my-title-container">
+        <span class="my-title float-right">Freelance Web Developer / Creative <span class="my-name">- Gabriel M. Jaeger</span></span>
+        <span class="my-name-small-screen float-right">- Gabriel M. Jaeger</span>
+      </div>
+    </div>
+    <div class="about-me-image-container">
+      <%= image_tag('adventure.jpg', :class=>"about-me-image")%>
+    </div>
+    <div class="about-me-text-container">
+      <div class="about-me-title-container">
+        <span class="about-me-title page-title">hunter</span>
+        <span class="hunter-prounounciation">|ˈhən(t)ər|</span>
+      </div>
+      <span class="about-me-text">While I did not choose my surname "Jaeger", it describes me perfectly as a person. Jaeger means hunter in German (you might be familiar with the drink Jägermeister). I am always chasing a goal and don't give up until I accomplish it. There is no challenge that I will not overcome.
+      </br>
+      </br>
+      I am a citizen of the world and have lived on all sides of the planet. I speak 3 languages fluently and love adventures and travel.</span>
     </div>
   </div>
-  <div class="about-me-image-container">
-    <%= image_tag('adventure.jpg', :class=>"about-me-image")%>
-  </div>
-  <div class="about-me-text-container">
-    <div class="about-me-title-container">
-      <span class="about-me-title page-title">hunter</span>
-      <span class="hunter-prounounciation">|ˈhən(t)ər|</span>
+  <div class="my-places">
+    <div class="my-places-text-container">
+      <div class="my-places-title-container">
+        <span class="my-places-title page-title">My Story</span>
+      </div>
+      <span class="my-places-text">I was born in Paderborn, a small town in the center of Germany but spent my teenage years in Singapore. Upon graduation from High School I relocated to Canada to pursue my Higher Education at a top Business School.
+      <br>
+      <br>
+      After working in the start up industry in Paris for almost a year, I decided to further my skillset and relocated to Hong Kong to study as a Software Engineer.
+      </span>
     </div>
-    <span class="about-me-text">While I did not choose my surname "Jaeger", it describes me perfectly as a person. Jaeger means hunter in German (you might be familiar with the drink Jägermeister). I am always chasing a goal and don't give up until I accomplish it. There is no challenge that I will not overcome.
-    </br>
-    </br>
-    I am a citizen of the world and have lived on all sides of the planet. I speak 3 languages fluently and love adventures and travel.</span>
-  </div>
-</div>
-<div class="my-places">
-  <div class="my-places-text-container">
-    <div class="my-places-title-container">
-      <span class="my-places-title page-title">My Story</span>
+    <div class="my-places-image-container">
+      <%= image_tag('sailing.jpg', :class=>"my-places-image")%>
     </div>
-    <span class="my-places-text">I was born in Paderborn, a small town in the center of Germany but spent my teenage years in Singapore. Upon graduation from High School I relocated to Canada to pursue my Higher Education at a top Business School.
-    <br>
-    <br>
-    After working in the start up industry in Paris for almost a year, I decided to further my skillset and relocated to Hong Kong to study as a Software Engineer.
-    </span>
-  </div>
-  <div class="my-places-image-container">
-    <%= image_tag('sailing.jpg', :class=>"my-places-image")%>
   </div>
 </div>
