--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,8 @@
         </div>
       </div>
     </div>
-    <%= yield %>
+    <div class="yield-container">
+      <%= yield %>
+    </div>
   </body>
 </html>
