--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@ body, html{
 
 body{
   overflow-y: hidden !important;
+  height: 100%;
 }
 
 html { overflow:auto; }
@@ -35,6 +36,7 @@ html { overflow:auto; }
 
 .yield-container{
   overflow: scroll !important;
+  height: 100%;
 }
 
 .get-quote{
