--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,20 +21,8 @@ body, html{
 
 }
 
-body{
-  overflow-y: hidden !important;
-  height: 100%;
-}
-
-html { overflow:auto; }
-
 .page-content{
   margin-left: 0;
-}
-
-.yield-container{
-  overflow: scroll !important;
-  height: 100%;
 }
 
 .get-quote{
@@ -801,6 +789,23 @@ footer{
   color: $black-grey;
   background: none !important;
   border: 0px !important ;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+body{
+  overflow-y: hidden;
+  height: 100% !important;
+}
+
+html { overflow:auto; }
+
+.yield-container{
+  overflow: scroll !important;
 }
 
 strong{
