--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -791,25 +791,19 @@ footer{
   border: 0px !important ;
 }
 
-html, body {
-  height: 100%;
-}
 
-body{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  touch-action: none;
-}
+
+
 
 body{
   overflow-y: hidden;
   height: 100% !important;
 }
 
-html { overflow:auto; }
+html { overflow:auto !important; }
 
 .yield-container{
+  height: 100%;
   overflow: scroll !important;
 }
 
