phone refresh stilll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -796,14 +796,14 @@ footer{
 
 
 body{
-  overflow-y: hidden;
-  height: 100% !important;
+  overflow-y: hidden !important;
+  height: 1500px !important;
 }
 
 html { overflow:auto !important; }
 
 .yield-container{
-  height: 100%;
+  height: 1500px !important;
   overflow: scroll !important;
 }
 
