phone refresh stilllllll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -787,7 +787,7 @@ footer{
 
 
 body{
-  min-height: 100vh;
+  min-height: 100vh !important;
   overflow-y: hidden !important;
   height: 100% !important;
 }
