--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     <li class="menu" id="menu-dropdown">
       <a href="javascript:void(0)" class="menu-dropdown-button small-text"><i class="fa fa-bars" aria-hidden="true"></i></a>
       <ul class="small-screen-menu">
-        <a href="javascript:void(0)" class="closebtn">&times;</a>
+        <a href="javascript:void(0)" class="closebtn close-btn">&times;</a>
         <%= link_to home_path, class:"small-screen-menu-item" do%>
           <div class=""><span class="nav-item-content">Home</span></div>
         <%end%>
