--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -317,7 +317,7 @@ textarea:focus, input:focus, .simple-button:focus{
 
 .contact-modal{
   width: 100%;
-  height: 100vh !important;
+  height: 100% !important;
   position: fixed;
   top:-100%;
   left: 0;
