--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -319,7 +319,7 @@ textarea:focus, input:focus, .simple-button:focus{
   width: 100%;
   height: 100% !important;
   position: fixed;
-  top:-100%;
+  top:0;
   left: 0;
   z-index: 2000;
   background-color: $black-grey;
