--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -292,7 +292,7 @@ textarea:focus, input:focus, .simple-button:focus{
   text-align: center;
   padding: 10px;
   font-weight: 200;
-  z-index: 400000;
+  z-index: 40000;
 }
 
 .home-notice{
@@ -319,9 +319,11 @@ textarea:focus, input:focus, .simple-button:focus{
   width: 100%;
   height: 100% !important;
   position: fixed;
-  top:0;
+  top:-100%;
   left: 0;
-  z-index: 2000;
+  right:0;
+  bottom:100%;
+  z-index: 200000;
   background-color: $black-grey;
   display: none;
   overflow: scroll !important;
