--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -157,7 +157,7 @@ header{
 }
 
 .contact{
-  padding-top: 40px;
+  padding-top: 80px;
   background-color: $black-grey;
   height: 100%;
 }
@@ -226,24 +226,24 @@ header{
 }
 
 .budget-slider .ui-slider-handle {
-  width: 15px !important;
-  height: 15px !important;
+  width: 5px !important;
+  height: 30px !important;
   background: $orange !important;
   border-radius: 1%;
   border: none !important;
   cursor: pointer;
   outline: none;
-  margin-left: -13px !important;
+  margin-left: -2.5px !important;
 }
 
 .budget-slider.ui-slider-horizontal .ui-slider-handle {
   top: 50%;
-  margin-top: -7.5px;
+  margin-top: -15px;
 }
 
 .budget-slider.ui-slider-vertical .ui-slider-handle {
   left: 50%;
-  margin-left: -14.5px;
+  margin-left: -2.5px;
 }
 
 .budget-slider .ui-slider-handle:hover {
@@ -295,9 +295,9 @@ textarea:focus, input:focus, .simple-button:focus{
   z-index: 40000;
 }
 
-.home-notice{
-  top:60px !important; //homenavbar is absolute
-}
+// .home-notice{
+//   top:60px !important; //homenavbar is absolute
+// }
 
 .black{
   color:$black-grey !important;
@@ -315,19 +315,19 @@ textarea:focus, input:focus, .simple-button:focus{
   text-transform: uppercase;
 }
 
-.contact-modal{
-  width: 100%;
-  height: 100% !important;
-  position: fixed;
-  top:-100%;
-  left: 0;
-  right:0;
-  bottom:100%;
-  z-index: 200000;
-  background-color: $black-grey;
-  display: none;
-  overflow: scroll !important;
-}
+// .contact-modal{
+//   width: 100%;
+//   height: 100% !important;
+//   position: fixed;
+//   top:-100%;
+//   left: 0;
+//   right:0;
+//   bottom:100%;
+//   z-index: 200000;
+//   background-color: $black-grey;
+//   display: none;
+//   overflow: scroll !important;
+// }
 
 .closebtn {
   position: absolute;
@@ -920,7 +920,7 @@ strong{
   }
 
   #work-together-title{
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 300;
   }
   .my-title, .my-name-small-screen{
@@ -965,9 +965,9 @@ strong{
     min-height: 40px !important;
   }
 
-  .home-notice{
-    top:40px !important; //homenavbar is absolute
-  }
+  // .home-notice{
+  //   top:40px !important; //homenavbar is absolute
+  // }
 
   footer{
     height: 40px !important;
@@ -1001,13 +1001,13 @@ strong{
   }
 
   .budget-slider .ui-slider-handle {
-    width: 26px !important;
-    height: 26px !important;
+    width: 5px !important;
+    height: 30px !important;
   }
 
   .budget-slider.ui-slider .ui-slider-handle {
     top: 50%;
-    margin-top: -13px;
+    margin-top: -15px;
   }
 
   .budget-slider.ui-slider {
@@ -1039,6 +1039,9 @@ strong{
   }
   .page-title{
     font-size: 36px !important;
+  }
+  #work-together-title{
+    font-size: 20px !important;
   }
   .hunter-prounounciation{
     font-size: 18px !important;
