--- a/app/views/static_page/contact.html.erb
+++ b/app/views/static_page/contact.html.erb
@@ -1,5 +1,5 @@
 <%= render "layouts/navbar" %>
-<div class="contact">
+<div class="contact page-content">
   <% unless notice.nil?%>
     <p id="notice"><%= notice %></p>
   <%end%>
