--- a/app/views/static_page/portfolio.html.erb
+++ b/app/views/static_page/portfolio.html.erb
@@ -8,9 +8,11 @@
       <%= image_tag('e-commerce.jpg', :class=>"project-image")%>
     </div>
     <div class="project-details-container">
-      <span class="key-features-title">
-        Key Features
-      </span>
+      <div class="key-features-title-container">
+        <span class="key-features-title">
+          Key Features
+        </span>
+      </div>
       <ul class="feature-list">
         <li class="feature">Automatic Shipping Rate Calculation</li>
         <li class="feature">Secure Online Payment</li>
